--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,8 @@
   background-color: var(--green-950);
 }
 
-.letsbeginbutton-container button :first-child {
+.letsbeginbutton-container button :first-child, .letsbeginbutton-container button {
   color: white;
   font-size: medium;
+  white-space: nowrap;
 }
