--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,92 @@
   font-size: medium;
   white-space: nowrap;
 }
+
+
+
+/* DEFAULT LAYOUT */
+
+.homepage-container {
+  display: flex;
+  max-width: 100%;
+  height: 100vh;
+}
+
+.h-sidebar {
+  width: 20%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  box-sizing: border-box;
+  border-right: rgba(204, 204, 204, 0.2) solid 1px;
+  color: white;
+  text-align: center;
+}
+
+.h-website-name h1 {
+  color: white;
+  font-weight: 800;
+  font-size: 2rem;
+  text-shadow: 
+    2px 2px 4px rgba(36, 163, 75, 0.9),
+    3px 3px 5px rgba(4, 37, 18, 0.9);
+}
+
+.h-profile-section {
+  margin: 40px 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.h-profile-picture {
+  max-width: 100px;
+  max-height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.h-profile-section h3 {
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.h-profile-section p {
+  font-size: 0.8rem;
+}
+
+.h-navigation-links ul {
+  list-style: none;
+  margin: 12px 0;
+  padding: 0;
+}
+
+.h-navigation-links .h-nav-link li {
+  margin: 10px 0;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.6);
+  text-align: left;
+  border-radius: 6px;
+  transition: background-color 0.1s ease;
+}
+
+.h-nav-link li :first-child {
+  display: inline;
+  margin-right: 10px;
+  margin-top: -5px;
+}
+
+.h-navigation-links .h-nav-link:hover li {
+  background-color: rgba(5, 52, 25, 0.6);
+  color: rgb(255, 255, 255);
+}
+
+.h-main-container {
+  width: 80%;
+  padding: 20px 20px 0 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
